<resources>
    <string name="app_name">RonaldTarea1</string>
    <string name="edit_text_hint">Ingrese su operación aquí</string>
    <string name="Uno">1</string>
    <string name="Dos">2</string>
    <string name="Tres">3</string>
    <string name="Cuatro">4</string>
    <string name="Cinco">5</string>
    <string name="Seis">6</string>
    <string name="Siete">7</string>
    <string name="Ocho">8</string>
    <string name="Nueve">9</string>
    <string name="Cero">0</string>
    <string name="Mas">+</string>
    <string name="Menos">-</string>
    <string name="Div">/</string>
    <string name="Multi">*</string>
    <string name="ParAb">(</string>
    <string name="ParCerr">)</string>
    <string name="Punto">.</string>
    <string name="Porc">%</string>
    <string name="AC">AC</string>
    <string name="Igual">=</string>

</resources>
